Change pom.